# pin-scoped

./: Cargo.toml  README.md
examples/: hyper.rs
src/: async_fn.rs  lib.rs  loom_rt.rs  send_rwlock.rs  spawner.rs  sync.rs  tokio.rs
tests/: closure.rs  loom.rs  spawn_nested.rs  ui.rs
tests/ui/: 01-capture-state.rs  01-capture-state.stderr  02-stash-pinned-state.rs  02-stash-pinned-state.stderr  03-return-state.rs  03-return-state.stderr  04-return-nested-state.rs  04-return-nested-state.stderr
