[package]
name = "pin-scoped"
version = "0.1.0"
edition = "2021"
description = "Scoped async tasks API"
repository = "https://github.com/conradlugate/pin-scoped"
rust-version = "1.63"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
categories = ["async", "concurrency"]
keywords = ["async", "futures", "tokio", "scoped"]
license = "MIT OR APACHE2"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
pin-project-lite = "0.2"

tokio = { version = "1.37.0", optional = true, default-features = false, features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
futures-util = "0.3.30"
tokio = { version = "1.37.0", default-features = false, features = ["macros", "time"] }
trybuild = "1.0.96"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[package.metadata.docs.rs]
all-features = true
