[package]
name = "pin-scoped"
version = "0.1.0"
edition = "2021"
description = "Scoped async tasks API"
repository = "https://github.com/conradlugate/pin-scoped"
rust-version = "1.70"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
categories = ["async", "concurrency"]
keywords = ["async", "futures", "tokio", "scoped"]
license = "MIT OR APACHE2"

[features]
default = []

[dependencies]
pin-project-lite = "0.2"
slotmap = "1.0.7"
tokio = { version = "1.40.0", default-features = false, features = ["rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["rt"] }

[dev-dependencies]
futures-util = "0.3.30"
tokio = { version = "1.40.0", default-features = false, features = ["sync", "macros", "time", "signal"] }
trybuild = "1.0.99"
diatomic-waker = "0.2"

hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
http-body-util = "0.1.1"

[target.'cfg(pin_scoped_loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pin_scoped_loom)'] }

[package.metadata.docs.rs]
all-features = true
